fixes tests and no wrap

--- a/angular/src/app/home/nav/nav.component.sass
+++ b/angular/src/app/home/nav/nav.component.sass
@@ -38,6 +38,7 @@
 .link-text
   display: none
   margin-left: 1rem
+  white-space: nowrap
 
 .nav-item:last-child
   margin-top: auto
